<resources>
    <string name="app_name">ScratchIt Ticket Validation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_txtpassword">Password</string>
    <string name="login_txtusername">Username</string>
    <string name="login_btnlogin">Login</string>

    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>


    <string name="settings_lblserver">Server</string>
    <string name="settings_txtserver">Server URL (ex. https://licserv.\ncombizcorp.com/scratchit)</string>
    <string name="settings_lbllicense">License</string>
    <string name="settings_txtlicense">Not registered</string>
    <string name="settings_btnsave">Save settings</string>
    <string name="settings_error_invalidURL">Invalid License Server URL!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
